# go-examples

./: .gitignore  LICENSE
csv-examples/: go.mod  go.sum
csv-examples/app/client/: http.go
csv-examples/app/csv/: MOCK_DATA.csv  maker.go
csv-examples/app/server/: http.go
csv-examples/cmd/: main.go
grpc-examples/: Makefile
grpc-examples/go/: README.md  go.mod  go.sum
grpc-examples/go/cmd/: main.go
grpc-examples/go/proto/: greet.pb.go  greet_grpc.pb.go  helloworld.pb.go  helloworld_grpc.pb.go  other.pb.go  other_grpc.pb.go
grpc-examples/go/tcpdump/: bi.pcapng  client.pcapng  server.pcapng
grpc-examples/protos/: greet.proto  helloworld.proto  other.proto
grpc-examples/python/: main.py  pyproject.toml
grpc-examples/python/app/client/: client.py
grpc-examples/python/app/server/: hello_world.py  other.py
grpc-examples/python/proto/: helloworld_pb2.py  other_pb2.py  other_pb2_grpc.py
memberlist-exp/: go.mod  go.sum  main.go
net-examples/: main.go
state-examples/chain/: go.mod  main.go
state-examples/chain/state/: has_item_state.go  has_money_state.go  item_requested_state.go  no_item_state.go
state-examples/chain/statemachine/: state.go
state-examples/functional/: go.mod  main.go
state-examples/functional/action/: has_item_state.go  has_money_state.go  item_requested_state.go  no_item_state.go
state-examples/functional/actiontype/: action.go
state-examples/functional/state/: state.go
state-examples/normal/: go.mod  main.go
state-examples/normal/state/: has_item_state.go  has_money_state.go  item_requested_state.go  no_itemstate.go  (+1 more)
(+10 files in other folders)
